# bitcoin-handshake

./: Cargo.toml  README.md
src/: header.rs  lib.rs  magic_bytes.rs  message.rs  payload.rs
src/payload/: ping.rs  pong.rs  verack.rs  version.rs
tests/: tests.rs
