[package]
name = "btc-p2p"
version = "0.1.0"
edition = "2021"
default-run = "simple_handshake"

[dependencies]
bincode = "1.3.3"
hex-literal = "0.4.1"
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "io-util", "net", "time"] }

[[bin]]
name = "simple_handshake"
path = "src/bin/simple-handshake.rs"
